# cadet

./: .env.template  Cargo.toml  Dockerfile  LICENSE  compose.yml  readme.md
.github/workflows/: release.yml
.sqlx/: query-08cb56b524ad354b9857f9a1226b3cd9e63866f16c4901349ffa3cf116ca3131.json  query-0c381b47f0545051a3697231ad7693c81d9c9ec4b2fe10595d0fb8b795324da4.json  query-186f9cc50e1b653faf85d5fc39fc4cfd7b7c4c40575a60674a1972cc40a0bb07.json  query-2e4d35c3d5ba2c11650dea0040700fe1bb8daaea81afae03207c5c5728bfc629.json  query-2f4fa65f4e6fba08880f34a09e8e8362b70b945a2db85b93b3afa7eb2f6f90ba.json  query-35ab04574a5733740c481f525016c4acaf48cdc102e62399204ef4c840174c30.json  query-48bc464856431eadd14cc0221a031295180181d5bbf88f5367a00a8a64175e34.json  query-4d366142941f567787f074b2aed65f03f6e24880b2e34d1b8e3f53dc97ec6915.json  query-4d4367332aa62c685fbdbdde48e999a5acf5acfe926644ed346ee930fe0be17c.json  query-6e03a649140b963820a5f9eeb762f18927e08bb63e493a4a853a1521ba0d2b80.json  query-87b75704f775648ae72141c98c9433893c3969902226af12986b1d92e1916e4a.json  query-89c9c4e9342f20967783a57fa0fe08973133aea7a5b012275bb8e3ec51b528d2.json  query-8a96b942d1aa92d1badfbd0e992b74e67337a8b4b27cc28766ef7d9b72cb0f4c.json  query-9b6adc8156dd6475db7e5079d7d6e520d72ee959015c26e542ea2004d2ab51ff.json  query-9ba2b2d67bea67bfd615a5eef54f2d6a84bb56fc8bc0b85f0c0e282d8bea5b15.json  query-b7c97febb344af226056d06ee2e1d03321bf1124c92bd314ccdc813adf53805d.json  query-c8cc3765a2701914e910091405f0f1a45d8508b9e60deeca6c5c0fb743a10800.json  query-f24640d148258517f4d83f418e4487162b9fa5eb70b2dc37f6e8587b7e3d960c.json  query-f9e96f3507cbb3fa6152df2d04758a37e0047e2ab093513064d52ada2715b219.json  query-fa5a8904697548643f9a5a1cc012f997e641ddc6570c8a578ff0e9f2bd618988.json
aqua/: Cargo.toml
aqua/src/: main.rs
aqua/src/api/: mod.rs
aqua/src/repos/: actor_profile.rs  feed_play.rs  mod.rs  stats.rs
aqua/src/xrpc/: actor.rs
cadet/: Cargo.toml
cadet/.sqlx/: query-4d366142941f567787f074b2aed65f03f6e24880b2e34d1b8e3f53dc97ec6915.json  query-57c98c85868d06569bda461c1553f4afd48551aab5d0f2adaf3aa63831f77eca.json  query-5d6205a157cdb2031eba3ac3e1e0b19bca9f2264e3e60472e0dcbe0e989098c7.json  query-89c9c4e9342f20967783a57fa0fe08973133aea7a5b012275bb8e3ec51b528d2.json  query-8adb2daf4fb76d9a64e3d8afa7890af7e6aeb9168664bab3ed7fdd365786f2e6.json  query-9b6adc8156dd6475db7e5079d7d6e520d72ee959015c26e542ea2004d2ab51ff.json  query-aafd460ec18d8470cb5660a9c094aae62a33b534c8d21c20c1a92f777e8a46b8.json  query-b8b063fb873643bd7ad1e221ba480e907b3a5c641203532ddd126d3f896b3a92.json  query-dc44f791fefa3b06c4df056d9d6f2b7633f85c9676480c4ff6df6c001c79aa3c.json
cadet/sql/: base.sql
cadet/src/: cursor.rs  main.rs  resolve.rs
cadet/src/ingestors/: mod.rs
cadet/src/ingestors/teal/: actor_profile.rs  feed_play.rs  mod.rs
examples/: bsky-posts.rs  comprehensive-example.rs  reproduce-stall.rs  spew-bsky-posts.rs
migrations/: 001_initial_schema.sql  002_add_statii_table.sql
rocketman/: Cargo.toml  readme.md
rocketman/src/: connection.rs  endpoints.rs  handler.rs  ingestion.rs  lib.rs  options.rs
rocketman/src/types/: event.rs
satellite/: Cargo.toml  readme.md
satellite/src/: actor.rs  counts.rs  db.rs  main.rs
src/: connection.rs  handler.rs  options.rs
src/types/: event.rs
tealstream/: Cargo.toml
tealstream/src/: connection.rs  endpoints.rs  handler.rs  ingestion.rs  options.rs
types/: Cargo.toml  readme.md
types/lexicons/fm.teal.alpha/stats/: defs.json
types/src/: client.rs  error.rs  fm.rs  lib.rs  record.rs  types.rs
types/src/app/: bsky.rs
types/src/app/bsky/actor/: get_suggestions.rs
types/src/com/atproto/sync/: get_latest_commit.rs  get_record.rs  subscribe_repos.rs
types/src/fm/: teal.rs
types/src/fm/teal/: alpha.rs
types/src/fm/teal/alpha/: actor.rs  feed.rs
types/src/fm/teal/alpha/actor/: defs.rs  profile.rs  status.rs
types/src/fm/teal/alpha/feed/: defs.rs  get_actor_feed.rs  get_play.rs  play.rs
types/src/fm/teal/alpha/stats/: defs.rs
types/src/tools/ozone/: moderation.rs
types/src/tools/ozone/moderation/: defs.rs  emit_event.rs
types/src/tools/ozone/team/: list_members.rs
types/src/types/: string.rs
