[workspace]
members = ["cadet", "rocketman", "satellite", "aqua", "types"]
resolver = "2"


[workspace.dependencies]
tower-http = { version = "0.6", features = ["trace", "cors"] }
atrium-api = "0.25.2"
axum = "0.8"
# jetstream library
rocketman = { path = "./rocketman" }
# types library
types = { path = "./types" }
anyhow = "1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.20", features = [
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = "1"
serde_json = "1"
schemars = { version = "0.8.22", features = ["raw_value", "chrono"] }
flume = "0.11.1"
futures-util = "0.3"
url = "2.0"
rand = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
metrics = "0.24.1"
async-trait = "0.1.86"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "chrono",
] }
time = { version = "0.3.37", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
