[package]
name = "rocketman"
version = "0.2.3"
edition = "2021"

license = "MIT"
authors = ["Natalie B. <nat@natalie.sh>"]
repository = "https://github.com/espeon/cadet"

readme = "rocketman-readme.md"

description = "A modular(ish) jetstream consumer."

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.20", features = [
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3"
url = "2.0"
rand = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
metrics = "0.24.1"
derive_builder = "0.20.2"
bon = "3.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11.1"
anyhow = "1"
async-trait = "0.1.86"
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zstd"]
zstd = ["dep:zstd"]
