[package]
name = "rocketman"
version = "0.3.0"
edition = "2021"

license = "MIT"
authors = ["Natalie B. <nat@natalie.sh>"]
repository = "https://github.com/espeon/cadet"

readme = "readme.md"

description = "A modular(ish) jetstream consumer."

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.0"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
derive_builder = "0.20"
bon = "3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"
anyhow = "1"
async-trait = "0.1"
zstd = { version = "0.13", optional = true }
rustls = { version = "0.23.31", features = ["ring"] }

[features]
default = ["zstd"]
zstd = ["dep:zstd"]
