[package]
name = "aqua"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
sys-info = "0.9.1"
axum.workspace = true
tower-http = { workspace = true, features = ["cors"] }
time.workspace = true
atrium-api.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
dotenvy.workspace = true

types.workspace = true
chrono = "0.4.41"

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "rustc", "si"] }
vergen-gitcl = "1.0.8"
