[package]
name = "cadet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
url.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = "0.16.2"
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rocketman.workspace = true
types.workspace = true
flume.workspace = true
async-trait.workspace = true
sqlx.workspace = true
time.workspace = true
dotenvy.workspace = true
multihash-codetable = { version = "0.1.4", features = ["sha2", "serde"] }
multibase = "0.9.1"
