[package]
name = "rocketman"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util = "0.3"
url.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
derive_builder = "0.20.2"
bon = "3.3.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
flume.workspace = true
anyhow.workspace = true
async-trait.workspace = true
